app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-literal/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-literal/src/patmat.cal:6:22: error: case may not be exhaustive.
It would fail on pattern: false
                case b of
                     ^